--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-mongo": "^3.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8"
   }
